@@ -1,30 +1,25 @@
 package org.eclipse.cargotracker.domain.model.handling;
 
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 
-public class HandlingHistory {
-    // private static final Logger LOGGER = Logger.getLogger(HandlingHistory.class.getName());
+/**
+ * The handling history of a cargo.
+ */
+public record HandlingHistory(List<HandlingEvent> handlingEvents) {
 
     // Null object pattern.
     public static final HandlingHistory EMPTY = new HandlingHistory(Collections.emptyList());
+
     private static final Comparator<HandlingEvent> BY_COMPLETION_TIME_COMPARATOR =
             Comparator.comparing(HandlingEvent::getCompletionTime);
-    private final List<HandlingEvent> handlingEvents;
 
-    public HandlingHistory(Collection<HandlingEvent> handlingEvents) {
+    public HandlingHistory {
         Objects.requireNonNull(handlingEvents, "Handling events are required");
-
-        this.handlingEvents = new ArrayList<>(handlingEvents);
-    }
-
-    public List<HandlingEvent> getAllHandlingEvents() {
-        return handlingEvents;
     }
 
     /**
@@ -35,7 +30,7 @@ public class HandlingHistory {
         List<HandlingEvent> ordered = new ArrayList<>(new HashSet<>(handlingEvents));
         ordered.sort(BY_COMPLETION_TIME_COMPARATOR);
 
-        return Collections.unmodifiableList(ordered);
+        return List.copyOf(ordered);
     }
 
     /**
@@ -43,18 +38,6 @@ public class HandlingHistory {
      */
     public HandlingEvent getMostRecentlyCompletedEvent() {
         List<HandlingEvent> distinctEvents = getDistinctEventsByCompletionTime();
-        // LOGGER.log(Level.INFO, "distinct events: {0}", distinctEvents);
         return distinctEvents.isEmpty() ? null : distinctEvents.getLast();
-    }
-
-    @Override
-    public boolean equals(Object o) {
-        if (!(o instanceof HandlingHistory that)) return false;
-        return Objects.equals(handlingEvents, that.handlingEvents);
-    }
-
-    @Override
-    public int hashCode() {
-        return Objects.hashCode(handlingEvents);
     }
 }
